Finally finished linear regression deep dive python implementation and annotation

--- a/Week 1/ML-Exercise1.ipynb
+++ b/Week 1/ML-Exercise1.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "4      5.8598   6.8233"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "max     22.203000  24.147000"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,16 +409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2483eebff98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2483f064d30>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
        "4     1      5.8598   6.8233"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "4     1      5.8598"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
        "4   6.8233"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
        "matrix([[0, 0]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "((97, 2), (1, 2), (97, 1))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (b) Finally, let's compute the cost!"
+    "### (b) Finally, let's compute the cost using our initial parameters!"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
        "32.072733877455676"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,12 +1118,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far so good.  Now we need to define a function to perform gradient descent on the parameters theta using the update rules defined in the text."
+    "So far so good.  Now we need to define a function to perform gradient descent on the parameters theta using the update rules defined in the text.\n",
+    "\n",
+    "Recall that the gradient descent algorithm is follows:\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\theta_j := \\theta - \\alpha \\frac{\\alpha}{\\alpha \\theta_j} J(\\theta_0, \\theta_1)\n",
+    "\\end{align}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,13 +1142,94 @@
     "        error = (X * theta.T) - y\n",
     "        \n",
     "        for j in range(parameters):\n",
-    "            term = np.multiply(error, X[:,j])\n",
+    "            term = np.multiply(error, X[:,j])          \n",
     "            temp[0,j] = theta[0,j] - ((alpha / len(X)) * np.sum(term))\n",
     "            \n",
     "        theta = temp\n",
     "        cost[i] = computeCost(X, y, theta)\n",
     "        \n",
-    "    return theta, cost"
+    "    return theta, cost\n",
+    "\n",
+    "    # Once run through all iterations, returns matrix of final theta values + matrix of costs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (a) Breaking down the code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See also: https://stackoverflow.com/questions/45605772/gradient-descent-for-linear-regression-in-python-code\n",
+    "\n",
+    "#### (i) Line 2\n",
+    "\n",
+    "`temp = np.matrix(np.zeros(theta.shape))`\n",
+    "\n",
+    "`np.zeros` returns a <b>new</b> array of the given shape and type, filled with zeros.  In this case, we supply `(theta.shape)`, which is the shape of the theta matrix (i.e. 1 row x 2 columns).  \n",
+    "\n",
+    "Altogether this generates the following:\n",
+    "\n",
+    "`[[0. 0.]]`\n",
+    "\n",
+    "Which is assigned to the variable, `temp`.\n",
+    "\n",
+    "<b>Purpose:</b> initialises the weights matrix.\n",
+    "\n",
+    "#### (ii) Line 3\n",
+    "\n",
+    "`parameters = int(theta.ravel().shape[1])`\n",
+    "\n",
+    "`.ravel()` \"<b>flattens</b>\" the theta matrix to a single row matrix, i.e. `[[0, 0]]`\n",
+    "\n",
+    "`.shape[1]` returns the <b>number of columns</b> of that matrix, i.e. 2.\n",
+    "\n",
+    "`.int`returns the integer value of that in brackets, i.e. 2.\n",
+    "\n",
+    "All of which is assigned to the variable, `parameters`.\n",
+    "\n",
+    "<b>Purpose:</b> is the number of weights, in our case only two, i.e. $\\theta_0$ and $\\theta_1$.\n",
+    "\n",
+    "#### (iii) Line 4\n",
+    "\n",
+    "`cost = np.zeros(iters)` creates a matrix of zeros where the number of zeros is equal to the number of iterations.  \n",
+    "\n",
+    "<b>Purpose:</b> stores the cost values at the end of each iteration.\n",
+    "\n",
+    "#### (iv) Line 5\n",
+    "\n",
+    "`for i in range(iters):` means for each <b>iteraton</b> within desired \"range\", i.e. number of iterations, execute the code below it.\n",
+    "\n",
+    "#### (vi) Line 6\n",
+    "\n",
+    "`error = (X * theta.T) - y` creates a new variable equivalent to $h_\\theta(x^{(i)}) - y^{(i)})$.  This is calculating the cost for each training example.\n",
+    "\n",
+    "#### (vii) Line 7\n",
+    "\n",
+    "`for j in range(parameters):` means for each <b>feature</b>, i.e. each of the two features $x_0$ and $x_1$ in each iteration, execute the code below it.\n",
+    "\n",
+    "\n",
+    "#### (viii) Line 8\n",
+    "\n",
+    "`term = np.multiply(error, X[:,j])` multiples each row of the errors vector (`error`) against each of the corresponding x feature rows (`X[:,j]`) in X.\n",
+    "\n",
+    "\n",
+    "It is also equivalent to $(h_\\theta(x^{(i)}) - y^{(i)}).x^{(i)}$\n",
+    "\n",
+    "#### (xi) Line 9\n",
+    "\n",
+    "`temp[0,j] = theta[0,j] - ((alpha / len(X)) * np.sum(term))` updates the matrix of parameters with the next set of values after one iteration, and is equivalent to: $\\theta_j := \\theta - \\alpha \\frac{\\alpha}{\\alpha \\theta_j} J(\\theta_0, \\theta_1)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (b) Initial Alpha and No. of Iterations"
    ]
   },
   {
@@ -1154,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,12 +1253,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## (c) Run Gradient Descent!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now let's run the gradient descent algorithm to fit our parameters theta to the training set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -1180,13 +1274,16 @@
        "matrix([[-3.24140214,  1.1272942 ]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "g, cost = gradientDescent(X, y, theta, alpha, iters)\n",
+    "\n",
+    "# Note gradientDescent will return final values of theta PLUS the entire matrix of costs, hence multiple assignment whereby g = theta matrix and cost = cost matrix.\n",
+    "\n",
     "g"
    ]
   },
@@ -1206,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1312,7 @@
        "4.515955503078912"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,19 +1325,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (a) Plot final Linear Model"
+    "## Step 9 - Plot the Results"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### (a) Plot the Linear Model\n",
+    "\n",
     "Now let's plot the linear model along with the data to visually see how well it fits."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1348,7 @@
        "Text(0.5,1,'Predicted Profit vs. Population Size')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1293,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1401,7 @@
        "Text(0.5,1,'Error vs. Training Epoch')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1329,7 +1428,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear regression with multiple variables"
+    "# Part 2 Linear regression with multiple variables\n",
+    "______________________________________________________________________________________________________"
    ]
   },
   {
@@ -1536,13 +1636,6 @@
     "ax.set_xlabel('Population')\n",
     "ax.set_ylabel('Profit')\n",
     "ax.set_title('Predicted Profit vs. Population Size')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That's it!  Thanks for reading.  In Exercise 2 we'll take a look at logistic regression for classification problems."
    ]
   }
  ],
