Rearranged folders and upload of NN theory

--- a/Week 3/ANML - Week 3 - Logistic Regression - Implementation.ipynb
+++ b/Week 3/ANML - Week 3 - Logistic Regression - Implementation.ipynb
@@ -623,7 +623,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b9db4d2550>]"
+       "[<matplotlib.lines.Line2D at 0x182e14f09b0>]"
       ]
      },
      "execution_count": 12,
@@ -3173,21 +3173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set X and y (remember from above that we moved the label to column 0)\n",
     "cols = data2.shape[1]\n",
@@ -3213,7 +3201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3276,7 +3264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3355,7 +3343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3398,7 +3386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3418,7 +3406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3427,7 +3415,7 @@
        "0.6931471805599454"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3445,7 +3433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3460,7 +3448,7 @@
        "       4.08503006e-04, 7.26504316e-03, 1.37646175e-03, 3.87936363e-02])"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3480,7 +3468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3497,7 +3485,7 @@
        " 1)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3518,7 +3506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3549,7 +3537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3561,7 +3549,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3574,7 +3562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
