--- a/Week 4/ANML - Week 4 - Neural Networks - Representation - Theory.ipynb
+++ b/Week 4/ANML - Week 4 - Neural Networks - Representation - Theory.ipynb
@@ -6,29 +6,29 @@
    "source": [
     "# 1. Introduction\n",
     "\n",
-    "\n",
+    "## 1.1. What is a neuron?\n",
     "\n",
     "A neuron is the brain's <b>basic computational unit</b>.  \n",
     "\n",
     "It receives and integrates chemical signals from other neurons via <b>dendrites</b> and, depending on a number of factors, it either does nothing or generates an electrical signal output via <b>axons</b>, which in turn signals other connected neurons via synapses:\n",
     "\n",
     "<p align = \"center\">\n",
-    "<img src=../Images\\neuralnetworks7.PNG width=100%>\n",
+    "<img src=\"..\\Images\\neuralnetworks7.PNG\" width=100%>\n",
     "</p>\n",
     "\n",
     "<p align = \"center\">\n",
-    "<img src=../Images\\neuralnetwork3.PNG width=100%>\n",
+    "<img src=\"..\\Images\\neuralnetwork3.PNG\" width=100%>\n",
     "</p>\n",
     "\n",
     "Source: https://becominghuman.ai/making-a-simple-neural-network-2ea1de81ec20\n",
     "\n",
-    "## What is a neural network?\n",
+    "## 1.2. What is a neural network?\n",
     "\n",
     "A neural network is <b>simply a network of neurons</b>.\n",
     "\n",
-    "## How do we represent a neural network algorithmically?\n",
+    "## 1.3. How do we represent a neural network algorithmically?\n",
     "\n",
-    "#### A simple neural network\n",
+    "### 1.3.1. A simple neural network\n",
     "\n",
     "The below is a simple neural network.  Note x<sub>0</sub> is our \"<b>bias unit</b>\" and always equal to 1.  In neural networks we use the same logistic function as in logistic regression, i.e. the sigmoid (logistic) activation function described below:\n",
     "\n",
@@ -38,7 +38,7 @@
     "\n",
     "In the above, the input layer (layer 1) feeds into the other layer (layer 2), which finally outputs the hypothesis function, known as the \"<b>Output Layer</b>\".\n",
     "\n",
-    "#### A more complex neural network\n",
+    "### 1.3.2. A more complex neural network\n",
     "\n",
     "The below is a more complex neural network, and includes a \"<b>Hidden Layer</b>\":\n",
     "\n",
@@ -60,7 +60,7 @@
     "\n",
     "3. The <b>output</b> layer is simply hƟ(x).\n",
     "\n",
-    "### Neural Networks notation\n",
+    "# 2. Neural Networks Notation\n",
     "\n",
     "<p align = \"center\">\n",
     "<img src=../Images\\neuralnetworks6.PNG width=100%>\n",
